--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.17.3",
+    "lodash": "^4.17.21",
     "mysql2": "^3.6.2",
     "sequelize": "^6.33.0"
   },
